Lesson 6. Домашнее задание  Исправление замечаний от 29.02.2024